--- a/cv.html
+++ b/cv.html
@@ -70,8 +70,7 @@
                     <p>Septembre 2018 - Aout 2020</p>
                 </div>
                 <ul>
-                    <li>Enseignement, formation, initiation et orientation des élèves dans le métier
-                    informatique</li>
+                    <li>Enseignement, formation et initiation aux nouvelles technologies</li>
                 </ul>
             </article>
             <article>
@@ -158,7 +157,7 @@
             <h3>Liens</h3>
             <ul>
                 <li>
-                    <a href="assets/pdf/CV_2024-10-09_Tychique Matthias_Matondo.pdf">Télécharger mon CV</a>
+                    <a href="assets/pdf/cvMatthias.pdf">Télécharger mon CV</a>
                 </li>
             </ul>
         </section>
